[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "asyncio-connection-pool"
dynamic = ["version"]
description = "A high-throughput, optionally-burstable pool free of explicit locking"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Patrick Gingras", email = "775.pg.12@gmail.com" }]
license = { text = "BSD-3-Clause" }
dependencies = []

[project.optional-dependencies]
datadog = ["ddtrace", "datadog"]

[dependency-groups]
dev = [
    "codecov~=2.1",
    "pyright>=1.1.396",
    "pytest~=8.1",
    "pytest-asyncio~=0.23",
    "pytest-cov~=5.0",
    "ruff~=0.4",
]

[tool.ruff.lint]
select = [
    "B",
    "COM",
    "E",
    "EM",
    "F",
    "I",
    "N",
    "PT",
    "RSE",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = ["COM812"]
preview = true

[tool.ruff.format]
preview = true
